# Eurobot-2026

./: .gitignore  Pinout.txt  README.md  Robot_parameters.txt
beacon_localizer/: package.xml  setup.cfg  setup.py
beacon_localizer/beacon_localizer/: beacon_localizer.py
configs/: nav_param.yaml  route.json  rviz_config.rviz
configs/map/: map.pgm  map.yaml
esp32_bridge/: README.md  package.xml  setup.py
esp32_bridge/esp32_bridge/: EspClientApi.py  esp32_bridge.py  test_client.py  test_lidar.py  test_server.py
esp32_low_level/: README.md  esp32_low_level.ino  lidar.ino  lift.ino  motors.ino  odometry.ino  parameters.h  pinout.h  server.ino  servo_control.ino
lidar_odometry/: package.xml  setup.cfg  setup.py
lidar_odometry/lidar_odometry/: geometry.py  lidar_odometry.py
map/: map.yaml
my_nav_launch/: README.md  package.xml  setup.cfg  setup.py
my_nav_launch/launch/: navigation.launch.py
my_nav_launch/map/: map.pgm
my_nav_launch/nav_config/: nav_param.yaml
my_teleop/: README.md  package.xml  setup.py
my_teleop/configs/: nav_param.yaml  rviz_config.rviz  slam_param.yaml
my_teleop/esp32_bridge/esp32_bridge/: EspClientApi.py  esp32_bridge.py  test_server.py
my_teleop/my_teleop/: my_teleop.py
path_follower/: package.xml  setup.py
path_follower/path_follower/: path_follower.py
route_executor/: package.xml  setup.py
route_executor/config/: route.json
route_executor/route_executor/: route_executor_node.py
route_follower/: README.md  package.xml  setup.cfg  setup.py
route_follower/route_follower/: route_follower.py  target_types.py
