<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_teleop</name>
  <version>0.0.0</version>
  <description>Generic keyboard teleop for twist robots.</description>
  <maintainer email="kakoy-to-chuvak@yandex.ru">Daniil</maintainer>
  <license>BSD</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
